// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatingButton /> - snapshot renders FloatingButton when disabled 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#b5b5b5",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when disabled and loading 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#b5b5b5",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        importantForAccessibility="yes"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "telldusicons",
            "fontSize": 25,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        loading
      </Text>
    </View>
  </View>
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when enabled 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#000000",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when enabled and loading 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#000000",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        importantForAccessibility="yes"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "telldusicons",
            "fontSize": 25,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        loading
      </Text>
    </View>
  </View>
</View>
`;
